added tags form field

--- a/UltimatePomodoro/Schedule.xaml
+++ b/UltimatePomodoro/Schedule.xaml
@@ -47,6 +47,9 @@
                              Margin="0,0,0,30"
                              Name="Title"
                              />
+                    <TextBox PlaceholderText="Tags  e.g 'programming,blogging'"
+                             Margin="0,0,0,30"
+                             Name="Tags"/>
                     <TextBox PlaceholderText="Description"
                              x:Name="Description"/>
                     <StackPanel Orientation="Horizontal"
