--- a/UltimatePomodoro/Schedule.xaml
+++ b/UltimatePomodoro/Schedule.xaml
@@ -35,7 +35,8 @@
                 <Button x:Name="NewTaskButton"
                         Click="NewTaskButton_Click"
                         RelativePanel.Below="Date"
-                        RelativePanel.AlignRightWithPanel="True"
+                        RelativePanel.AlignHorizontalCenterWithPanel="True"
+                        Margin="0,0,0,50"
                         Visibility="Collapsed"
                         Content="New Task"/>
                 <StackPanel x:Name="NewTaskForm"
