--- a/UltimatePomodoro/Profile.xaml
+++ b/UltimatePomodoro/Profile.xaml
@@ -9,6 +9,6 @@
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Grid>
-
+        <TextBlock Text="Logged In as "/>
     </Grid>
 </Page>
